# Uranus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: FindEigen.cmake
data/: fisher-example
docs/: README.md  概要设计说明.docx  测试报告.docx  详细设计说明.docx
examples/: BFGS.cc  CMakeLists.txt  Fisher-Iris.cc  Fisher-sonar.cc  Fisher.cc  Fisher.h  GA.cc  Iris-Visual.cc  Newton.cc  k-means.cc  knn-Iris.cc  knn.cc  main.cc  sonar-visual.cc
examples/Pattern Recognition/: Data.cc  Fisher-Iris.cc  Fisher-sonar.cc  Fisher.cc
html/: README.md  _fisher-_iris_8cc.html  _fisher-_iris_8cc__incl.map  _fisher-_iris_8cc__incl.md5  _fisher-_iris_8cc_source.html  _fisher-sonar_8cc.html  _fisher-sonar_8cc__incl.map  _fisher-sonar_8cc__incl.md5  _fisher-sonar_8cc_source.html  _fisher_8cc.html  _fisher_8cc__incl.map  _fisher_8cc__incl.md5  _fisher_8cc_source.html  _function_8hpp.html  _function_8hpp__dep__incl.map  _function_8hpp__dep__incl.md5  _function_8hpp__incl.map  _function_8hpp__incl.md5  _function_8hpp_source.html  _matrix_8hpp.html  _matrix_8hpp__dep__incl.map  _matrix_8hpp__dep__incl.md5  _matrix_8hpp__incl.map  _matrix_8hpp__incl.md5  _matrix_8hpp_source.html  _newton_8cc.html  _newton_8cc__incl.map  _newton_8cc__incl.md5  _newton_8cc_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  _newton_8cc_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  _newton_8cc_source.html  _tensor_8hpp.html  _tensor_8hpp__dep__incl.map  _tensor_8hpp__dep__incl.md5  _tensor_8hpp__incl.map  _tensor_8hpp__incl.md5  _tensor_8hpp_source.html  annotated.html  classes.html  classuranus_1_1_data___wrapper-members.html  (+78 more)
html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
include/eigen3-hdf5/: eigen3-hdf5-sparse.hpp  eigen3-hdf5.hpp
include/uranus/: Function.hpp  Matrix.hpp  Optimizer.h  Tensor.hpp  constrained.hpp  log.h  un-constrained.hpp
log/: readme.md
test/: function_unittest.cc  gtest-helpers.hpp  matrix_unittest.cc  test_Attribute.cpp  test_MatrixRoundTrip.cpp  test_Sparse.cpp  test_VectorRoundTrip.cpp
uranus/: Function.hpp
